# multi-agent-billing-support-system

./: .env.example  .gitignore  main.py  pyproject.toml
app/: database.py  graph.py  lm.py  main.py  persistence.py  state.py
app/agents/: billing_agent.py  common.py  customer_agent.py  intent_agent.py  response_agent.py
app/models/: __init__.py  agent_event.py  customer.py  invoice.py  payment.py  policy.py  ticket.py
app/tools/: billing_tool.py  customer_tool.py
