[project]
name = "multi-agent-billing-support-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
